# funly

./: Cargo.toml  README.md
examples/: add.fun  foo.fun  id.fun  recur.fun
src/: ast.rs  compile.rs  jit.rs  lib.rs  main.rs  parse.rs  resolve.rs  typeck.rs  validate.rs
src/ast/: context.rs  make.rs  visit.rs
src/compile/: test.rs
src/resolve/: syntax.rs
