[package]
name = "funly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
color-eyre = "0.6.2"
derive_more = "0.99.17"
duplicate = "0.4.1"
id-arena = "2.2.1"
paste = "1.0.7"
peg = "0.8.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
