[package]
name = "funly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.8"
by_address = "1.0.4"
chumsky = "0.8.0"
color-eyre = "0.6.2"
cranelift = "0.86.1"
cranelift-jit = "0.86.1"
cranelift-module = "0.86.1"
cranelift-native = "0.86.1"
dashmap = "5.3.4"
derive_more = "0.99.17"
duplicate = "0.4.1"
paste = "1.0.7"
peg = "0.8.0"
thiserror = "1.0.32"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing-tree = "0.2.1"
typed-arena = "2.0.1"

[dev-dependencies]
pretty_assertions = "1.2.1"
